--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-welcome to my blog!
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<title>海兄弟的技术博客</title>
+</head>
+
+<body>
+<table width="1000" border="0">
+  <tr>
+    <td width="244" height="48"  bordercolor="#336600">老毕自我介绍</td>
+    <td width="746">主要技术手册</td>
+  </tr>
+  <tr>
+    <td height="152" bordercolor="#336600"><img src="common/images/haibrother.jpg" width="138" height="200" /></td>
+    <td rowspan="2" background="linux/a.html"><p><a href="linux/index.html">haibrother linux</a></p>
+    <p><a href="php/index.html">haibrother php</a></p>
+    <p><a href="index.html">haibrother windows</a></p>
+    <p><a href="mysql/index.html">haibrother mysql</a></p>    </td>
+  </tr>
+  <tr bordercolor="#336600">
+    <td height="152"><p>我是一个PHP程序员，是一个宅男，非常热衷技术，支持开源，主要是研究web方向，这些文档是我工作遇到的问题总结和兴趣学习积累的。</p>
+    </td>
+  </tr>
+</table>
+</body>
+</html>
