--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <td height="152" bordercolor="#336600"><img src="common/images/haibrother.jpg" width="138" height="200" /></td>
     <td rowspan="2" background="linux/a.html"><p><a href="linux/index.html">haibrother linux</a></p>
     <p><a href="php/index.html">haibrother php</a></p>
+    <p><a href="javascript/index.html">haibrother javascript</a></p>
     <p><a href="index.html">haibrother windows</a></p>
+    <p><a href="docbook/index.html">haibrother docbook</a></p>
     <p><a href="mysql/index.html">haibrother mysql</a></p>    </td>
   </tr>
   <tr bordercolor="#336600">
