--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <p><a href="javascript/index.html">haibrother javascript</a></p>
     <p><a href="index.html">haibrother windows</a></p>
     <p><a href="docbook/index.html">haibrother docbook</a></p>
-    <p><a href="mysql/index.html">haibrother mysql</a></p>    </td>
+    <p><a href="mysql/index.html">haibrother mysql</a></p>    
+    <p><a href="nosql/index.html">haibrother nosql</a></p>    
+    
+    </td>
   </tr>
   <tr bordercolor="#336600">
     <td height="152"><p>我是一个PHP程序员，是一个宅男，非常热衷技术，支持开源，主要是研究web方向，这些文档是我工作遇到的问题总结和兴趣学习积累的。</p>
